--- a/HopSpot..xcodeproj/xcshareddata/xcschemes/HopSpot..xcscheme
+++ b/HopSpot..xcodeproj/xcshareddata/xcschemes/HopSpot..xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:HopSpot..xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IDEPreferLogStreaming"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
