--- a/HopSpot--Info.plist
+++ b/HopSpot--Info.plist
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+    <key></key>
+    <string></string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string></string>
+        <string>instagram</string>
+        <string>snapchat</string>
+    </array>
+</dict>
 </plist>
+
