Changes the Style of Promotion, Event, Creation and Edit Editted some form characteristics for the log_in and registration Added Custom view for Frat users which displays their posted Events and allows them to Create and Edit events

--- a/HopSpot..xcodeproj/xcshareddata/xcschemes/HopSpot..xcscheme
+++ b/HopSpot..xcodeproj/xcshareddata/xcschemes/HopSpot..xcscheme
@@ -56,6 +56,11 @@
             value = "YES"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "CG_NUMERICS_SHOW_BACKTRACE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
       <LocationScenarioReference
          identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
